--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
@@ -11,14 +12,13 @@
     "sequelize": "^6.17.0"
   },
   "scripts": {
-    "start": "node server.js"
-    
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
   },
   "name": "tech-blog",
   "description": "AS A developer who writes about tech I WANT a CMS-style blog site SO THAT I can publish articles, blog posts, and my thoughts and opinions",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cjsmith011/tech-blog.git"
